2002-07-16  Didier Verna  <didier@xemacs.org>

	* subr.el (replace-in-string): fix case fold bug introduced by
	"2000-07-30  Ben Wing  <ben@xemacs.org>": honor the value of
	case-fold-search in temporary buffers.

2002-07-01  Mike Alexander  <mta@arbortext.com>

	* code-process.el (call-process-region): Don't delete the process
	output if start equals end

2002-07-14  Mike Alexander  <mta@arbortext.com>

	* process.el (shell-command-on-region): Don't delete the region
	before giving it to call-process-region

2002-07-14  Adrian Aichner  <adrian@xemacs.org>

	* ChangeLog: It's XEmacs, not Xemacs.

2001-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mule/kinsoku.el (kinsoku-bol-p): Work with ascii and non-ascii
	mixed text.
	(kinsoku-eol-p): Ditto.

2001-07-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mule/kinsoku.el (kinsoku-ascii-eol, kinsoku-gb-bol,
	kinsoku-gb-eol, kinsoku-big5-bol, kinsoku-big5-eol): Assign
	characters as the category `s' or `e' correctly.

2002-06-26  John Paul Wallington  <jpw@shootybangbang.com>

	* derived.el (define-derived-mode): Put `derived-mode-parent'
	property on child.
	(derived-mode-p): New function; sync with GNU Emacs 21.

2002-06-16  Andy Piper  <andy@xemacs.org>

	* menubar-items.el (default-menubar): enable windows printing on
	cygwin as well as native.

2002-06-12  Andy Piper  <andy@xemacs.org>

	* printer.el (generic-print-buffer): catch all errors so that the
	print device can be cleared in all scenarios.
	(Printer-clear-device): make sure clearing the printer allows it
	to be used again immediately.
	(generic-print-region): make sure the default printer face is
	black-on-white.

2002-04-23  Jerry James  <james@xemacs.org>

	* window-xemacs.el (display-buffer-function): Change doc to
	reflect new arg.
	* window-xemacs.el (pre-display-buffer-function): Ditto.
	* window-xemacs.el (display-buffer): New arg, shrink-to-fit.  If
	non-nil, make the new window just big enough for its contents.